<resources>
    <string name="app_name">UnaCita</string>
    <string name="title_activity_my_reservations" translatable="false">MyReservations</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_my_resrvation" translatable="false">MyResrvation</string>
    <string name="title_activity_my_reservation" translatable="false">MyReservation</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_exampleee_just" translatable="false">Exampleee_just</string>
    <string name="signin">Sign in</string>
    <string name="forgetmypas">Forgot my password</string>
    <string name="enterasaguset">Enter as a guest</string>
    <string name="usernamehint">Enter your mobile number</string>
    <string name="passwordhint">Password</string>
    <string name="EnterActivationCode">Enter activation code</string>
    <string name="signupText">Sign up</string>
    <string name="nice">Nice</string>
    <string name="Null"> </string>
    <string name="WrongMobNumberAlert">Please enter a valid mobile number</string>
    <string name="WrongPass">Wrong password</string>
    <string name="EntermobnumberAlert">Please enter your mobile number</string>
    <string name="EnterPassAlert">Please enter your password</string>
    <string name="EnterActivationCodeAlert">Please enter the activation code</string>
    <string name="ActivationCodeMustBeFourDigistAlert">Activation code must be four digits</string>
    <string name="CheckInternetConnectionAlert">Please check your internet connection</string>
    <string name="SomethingWentWrongAlert">Something went wrong, please try again later</string>
    <string name="MobNumberActivatedAlert">Your mobile number has been activated, you can now sign in</string>
    <string name="InputCodeWrongAlert">The entered code is wrong, please try again</string>
    <string name="ResendCodeAlert">Resend code</string>
    <string name="VerificationCodeSentAlert">Please enter the verification code that was sent to your phone number</string>
    <string name="CancelAlert">Cancel</string>
    <string name="MobNoNotRegisteredAlert">Mobile number not registered, please register</string>
    <string name="PsswordIncorrectAlert">Password incorrect, please try again</string>
    <string name="MobNoIncorrectAlert">Mobile number incorrect, please make sure it is correct and try again</string>
    <string name="ReSendActivationCodeAlert">Your account is not activated, the activation code has been sent to
    your mobile phone, please enter it</string>
    <string name="ChangeLnaguageMessage">You can change application language at any time from settings inside the
    application</string>
    <string name="ok">OK</string>
    <string name="Search">Search</string>
    <string name="SentPasswordAlert">Please enter your sent password</string>
    <string name="SuccessResetPasswordAlert">You can now sign in using your new password</string>
    <string name="UserNameTextField">User name (optional)</string>
    <string name="MobileNumberTextField">Mobile number</string>
    <string name="EmailAddressTextField">Email address (optional)</string>
    <string name="PasswordTextField">Password</string>
    <string name="ConfirmPasswordTextField">Confirm password</string>
    <string name="CityButtonTitle">Choose city name</string>
    <string name="AccessYourLocationCheckBox">The application would like to use your location</string>
    <string name="PolicyCheckBox">I agree to the Application Name Agreement and privacy</string>
    <string name="OkButtnTitle">OK</string>
    <string name="buttnPicturePosition">0</string>
    <string name="NavigationBackButton">Back</string>
    <string name="ConfirmAlert">OK</string>
    <string name="PasswordNotMatchAlert">Password does not match</string>
    <string name="ExuseMeAlert">Excuse Me!</string>
    <string name="EnterMobAndPass">Enter mobile number and password</string>
    <string name="EnterAge">Enter your age</string>
    <string name="ApplicationPolicyAlert">The application policy must first be approved</string>
    <string name="MobEmailTakenAlert">Mobile number and Email address are already taken, please try another</string>
    <string name="MobTakenAlert">Mobile number is already taken, please try another one</string>
    <string name="EmailTakenAlert">Email address is already taken, please try another one</string>
    <string name="InvalidEmail">This email address is invalid, please rewrite it</string>
    <string name="InvalidPassword">Password length must be 6, Password must contain one uppercase letter, at least one number
    and at least one letter of lowercase</string>
    <string name="SendNewPass">Reset password link was sent to the E-mail, P.S. it might be arrived to junk mails.</string>
    <string name="CantFindNum">We can not find a user with that mobile</string>
    <string name="numberNotActivatedAlert">This number is already registered,Please activate it by entering the verification code</string>
    <string name="EnterVerificationCode">Please enter the verification code</string>
    <string name="InvalidFormatNum">The mobile number format is invalid.</string>
    <string name="ResendCode">Resend code</string>
    <string name="Code">Code</string>
    <string name="Direction">ltr</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="Email">Email:</string>
    <string name="password">Password</string>
    <string name="edit">Edit</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="add_delete_location">Add and delete location</string>
    <string name="Registered_Addresses">Registered addresses</string>
    <string name="save">Save</string>
    <string name="Delete_account">Stop my account</string>
    <string name="main">Home</string>
    <string name="service">Services</string>
    <string name="onservice">Service</string>
    <string name="reservations">Reservations</string>
    <string name="bag_reservation">Bag Reservations</string>
    <string name="favorites">Favorites</string>
    <string name="notification">Notifications</string>
    <string name="rate_toast">Your assessment of us contributes to our development, thank you</string>
    <string name="manage_account">Manage account</string>
    <string name="rate_app">Rate application</string>
    <string name="rate">Rate</string>
    <string name="points">My points</string>
    <string name="setting">Settings</string>
    <string name="relatives">My companions</string>
    <string name="share_app">Share application</string>
    <string name="help">Help</string>
    <string name="call_salon">Call salon</string>
    <string name="sigin_out">Sign out</string>
    <string name="check_internet_con">Please check the internet connection</string>
    <string name="refresh">Refresh</string>
    <string name="ClickonmapAlert">Click on the Map to select the desired location please </string>
    <string name="Recievedrequest">We received your order,Will reply within 30 minutes</string>
    <string name="EnterNumberofCustomers">Please, enter number Of customers</string>
    <string name="Backicon">@drawable/ic_keyboard_arrow_left_black_24dp</string>
    <string name="bride">Bride services and offers</string>
    <string name="groupReservation">Group Bookings</string>
    <string name="group_Reservation_another">Bookings for others</string>
    <string name="Hairdressing">Hairdressing</string>
    <string name="Haircut">Hair cut</string>
    <string name="makeup">Makeup</string>
    <string name="Manicure">Manicure</string>
    <string name="Skincare">Skin care</string>
    <string name="hairpigment">Hair pigment</string>
    <string name="Bookallcourierservices">Book all courier services</string>
    <string name="Deleteallcourierservices">Delete all courier services</string>
    <string name="ServiceName">Service name</string>
    <string name="ServicePlace">Medical service place</string>
    <string name="reminingtime">Remaining time to delete service is </string>
    <string name="delete">Delete</string>
    <string name="ServiceNamecom">Service name:</string>
    <string name="suppliereNamecom">Supplier name:</string>
    <string name="ProviderNamecom">Provider name:</string>
    <string name="Rating">Rating:</string>
    <string name="ServicePlacecom">Service place:</string>
    <string name="SaloonLocation">Salon location:</string>
    <string name="ServiceNamePromotion">Service name/Promotion</string>
    <string name="Choosetimeanddate">Choose time and date</string>
    <string name="Expectedservicetime">Expected service time:</string>
    <string name="ServiceCovering">There is no health centers covering my area/city</string>
    <string name="ProNotShard">The requested health center is not using this application</string>
    <string name="PricesRealistic">I need to know some services prices</string>
    <string name="ManyOption">The application does not offer many options</string>
    <string name="ServiceAvailable">No outside/home services available in my area</string>
    <string name="HandleApp">I could not handle the application</string>
    <string name="TechnicalReason">There are technical reasons that hinder app usage</string>
    <string name="OtherReasons">Other reasons</string>
    <string name="ShareMoreDetails">Share more details</string>
    <string name="send">Send</string>
    <string name="age">age</string>
    <string name="offer_type">Offer type</string>
    <string name="next">Next</string>
    <string name="client_name">Client name</string>
    <string name="Service_Place">Medical service provided at:</string>
    <string name="Service_Name">Service name</string>
    <string name="Number_of_services_on_offer">Number of services</string>
    <string name="discount_percentage">discount</string>
    <string name="offer_place">Offer place</string>
    <string name="month_in_offer">Month in offer</string>
    <string name="offer_end">Offer end</string>
    <string name="prc">Price</string>
    <string name="client_info">Client info</string>
    <string name="Mobile_n">Mobile number</string>
    <string name="child">Child</string>
    <string name="Adult">Adult</string>
    <string name="service_dates">Service\'s dates</string>
    <string name="filter">filter</string>
    <string name="removeFilter">Remove all filters</string>
    <string name="discount_asc">Discount percentage (ascending)</string>
    <string name="discount_desc">Discount percentage (descending)</string>
    <string name="discount_price_desc">Discount amount (descending)</string>
    <string name="discount_price_asc">Discount amount (ascending)</string>
    <string name="offer_price_asc">Offer price (ascending)</string>
    <string name="offer_price_desc">Offer price (descending)</string>
    <string name="offer_booking_count_asc">Offer bookings count (ascending)</string>
    <string name="offer_booking_count_desc">Offer bookings count (descending)</string>
</resources>