<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/one"
        android:title="@string/discount_asc"/>

    <item
        android:id="@+id/two"
        android:title="@string/discount_price_asc"/>
    <item
        android:id="@+id/three"
        android:title="@string/offer_booking_count_asc"/>

    <item
        android:id="@+id/four"
        android:title="@string/offer_price_asc"/>

    <item
        android:id="@+id/five"
        android:title="@string/discount_desc"/>

    <item
        android:id="@+id/six"
        android:title="@string/discount_price_desc"/>
    <item
        android:id="@+id/seven"
        android:title="@string/offer_booking_count_desc"/>

    <item
        android:id="@+id/eight"
        android:title="@string/offer_price_desc"/>


</menu>