<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Fragments.AccountFragment"

    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/end_gray"
        app:navigationIcon="@string/Backicon"
        app:popupTheme="@style/AppTheme"
        app:theme="@style/ToolbarColoredBackArrow"
        app:title=""
        app:titleMarginStart="@dimen/standard_175"
        app:titleTextColor="@color/end_gray" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioGroup
                    android:id="@+id/reason_redio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ServiceCovering"
                        />
                    <RadioButton
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ProNotShard"
                        />



                    <RadioButton
                        android:visibility="gone"
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ServiceAvailable"
                        />
                    <RadioButton
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PricesRealistic"
                        />
                    <RadioButton
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ManyOption"
                        />
                    <RadioButton
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/HandleApp"
                        />
                </RadioGroup>
                <RadioButton
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TechnicalReason"
                    />
                <RadioButton
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/OtherReasons"
                    />
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="#000"></LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ShareMoreDetails"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textSize="18dp"
                    />

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="79dp"
                    android:ems="10"
                    android:layout_marginBottom="@dimen/standard_20"
                    android:background="@drawable/shadow_edit_text"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/send"
                    android:layout_margin="3dp"
                    android:text="@string/send"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/high_button"
                    android:background="@drawable/shadow_button_add_site"
                    />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>



    </android.support.design.widget.CoordinatorLayout>
</android.support.design.widget.CoordinatorLayout>