<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shadow_gray_dialog"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/offer_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offer_type"
            android:gravity="center"
            android:textSize="@dimen/standard_20"
            android:textColor="#000"
            android:layout_marginBottom="5dp"
            />

        <CheckBox
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prc"
            android:gravity="center"
            android:textSize="@dimen/standard_20"
            android:textColor="#000"
            android:layout_marginBottom="5dp"
            />

        <!--<CheckBox-->
        <!--android:id="@+id/offer_s_date"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/start_offer"-->
        <!--android:gravity="center"-->
        <!--android:textSize="@dimen/standard_20"-->
        <!--android:textColor="#000"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--/>-->

        <!--<CheckBox-->
        <!--android:id="@+id/rate_service"-->

        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="تقييم الخدمة"-->
        <!--android:gravity="center"-->
        <!--android:textSize="@dimen/standard_20"-->
        <!--android:textColor="#000"-->
        <!--android:layout_marginBottom="5dp"-->

        <!--/>-->
        <CheckBox
            android:id="@+id/offer_e_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offer_end"
            android:gravity="center"
            android:textSize="@dimen/standard_20"
            android:textColor="#000"
            android:layout_marginBottom="15dp"

            />


        <CheckBox
            android:id="@+id/month_in_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/month_in_offer"
            android:gravity="center"
            android:textSize="@dimen/standard_20"
            android:textColor="#000"
            android:layout_marginBottom="5dp"
            />
        <CheckBox
            android:id="@+id/service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Service_Name"
            android:gravity="center"
            android:textSize="@dimen/standard_20"
            android:textColor="#000"
            android:layout_marginBottom="5dp"
            />

        <CheckBox
            android:id="@+id/place_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/offer_place"
            android:textColor="#000"
            android:textSize="@dimen/standard_20" />

        <CheckBox
            android:id="@+id/discountVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/discount_percentage"
            android:textColor="#000"
            android:textSize="@dimen/standard_20" />


        <CheckBox
            android:id="@+id/s_num_in_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/Number_of_services_on_offer"
            android:textColor="#000"
            android:textSize="@dimen/standard_20" />

        <!--<CheckBox-->
        <!--android:id="@+id/offer_status"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/status_offer"-->
        <!--android:textColor="#000"-->
        <!--android:textSize="@dimen/standard_20" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">
            <Button
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_button"
                android:textSize="@dimen/standard_20"
                android:background="@drawable/shadow_button_spinner2"

                android:text="@string/filter"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"
                android:textColor="#FFF"/>
            <Button
                android:id="@+id/clear"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_button" android:textSize="@dimen/standard_20"
                android:background="@drawable/shadow_button_blue"
                android:text="@string/removeFilter"
                android:textAllCaps="false"
                android:textColor="#FFF"/>

        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>