<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/end_gray"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:logo="@string/Backicon"
        app:popupTheme="@style/AppTheme"
        app:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="#fff" />

    <!--<android.support.v4.widget.NestedScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->
    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/high_edit_text"
            android:text="@string/client_info"
            android:gravity="center"
            android:textSize="@dimen/standard_20"
            android:textColor="@color/pf_red"
            />

        <View
            android:layout_marginBottom="@dimen/standard_20"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#000"
            />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_edit_text"
                android:text="@string/client_name"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                />

            <EditText
                android:inputType="text"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_edit_text"
                android:background="@drawable/border_edit_text"
                android:textSize="18dp"
                android:gravity="center"
                android:id="@+id/client_name"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_edit_text"
                android:text="@string/Mobile_n"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:digits="1234567890"

                />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_edit_text"
                android:layout_weight="1"
                android:background="@drawable/border_edit_text"
                android:gravity="center"
                android:digits="1234567890"
                android:inputType="phone"
                android:textSize="18dp" />

        </LinearLayout>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/childe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/child"
                />
            <RadioButton
                android:id="@+id/adult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Adult"
                />

        </RadioGroup>
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/period_show"
            android:background="@drawable/shadow_button_green_lite"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_gravity="center"
                android:id="@+id/period_journey"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/high_edit_text"></Spinner>
        </android.support.design.widget.CoordinatorLayout>

        <TextView

            android:id="@+id/age"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/high_edit_text"
            android:text="@string/age"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_edit_text"
                android:text="@string/Service_Place"
                />
            <TextView
                android:layout_weight="1"

                android:id="@+id/place"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_edit_text"
                android:text="@string/age"
                />

        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_50"
            android:layout_marginRight="10dp"
            android:background="@color/blue"
            android:text="@string/service_dates"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="45dp"
            android:layout_height="match_parent"/>





    </LinearLayout>
    <!--</android.support.v4.widget.NestedScrollView>-->

    <Button
        android:id="@+id/next"
        android:layout_marginTop="5dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/high_edit_text"
        android:background="@drawable/shadow_button_accent"
        android:text="@string/next"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        />
</android.support.design.widget.CoordinatorLayout>